[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/gfx/HUD/craftMatIcons.png" type="Texture" id=1]
[ext_resource path="res://assets/gfx/HUD/waterIcon.png" type="Texture" id=2]
[ext_resource path="res://src/gui/menus/main/inventory/CompactSubmenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/gui/menus/main/inventory/GridSlot.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/gui/menus/main/inventory/ResourceButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/gui/menus/main/inventory/inventory_screen.gd" type="Script" id=6]
[ext_resource path="res://icon.png" type="Texture" id=7]
[ext_resource path="res://src/gui/menus/resusable/menu_tooltip_proxy.gd" type="Script" id=8]

[node name="InventoryMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="Panel" type="Panel" parent="MarginContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 1016.0
margin_bottom = 592.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 1016.0
margin_bottom = 592.0

[node name="GridManager" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_right = 500.0
margin_bottom = 584.0
alignment = 2

[node name="ResourcesPanel" type="HBoxContainer" parent="MarginContainer/HBoxContainer/GridManager"]
margin_top = 198.0
margin_right = 500.0
margin_bottom = 310.0
alignment = 1

[node name="WaterButton" parent="MarginContainer/HBoxContainer/GridManager/ResourcesPanel" instance=ExtResource( 5 )]
margin_left = 78.0
margin_right = 190.0
margin_bottom = 112.0

[node name="Button" parent="MarginContainer/HBoxContainer/GridManager/ResourcesPanel/WaterButton" index="0"]
margin_left = 8.0
margin_top = 8.0
margin_right = 104.0
margin_bottom = 104.0

[node name="TextureRect" parent="MarginContainer/HBoxContainer/GridManager/ResourcesPanel/WaterButton/Button/VBoxContainer" index="0"]
texture = ExtResource( 2 )

[node name="EnergyButton" parent="MarginContainer/HBoxContainer/GridManager/ResourcesPanel" instance=ExtResource( 5 )]
margin_left = 194.0
margin_right = 306.0
margin_bottom = 112.0

[node name="MaterialsButton" parent="MarginContainer/HBoxContainer/GridManager/ResourcesPanel" instance=ExtResource( 5 )]
margin_left = 310.0
margin_right = 422.0
margin_bottom = 112.0

[node name="Button" parent="MarginContainer/HBoxContainer/GridManager/ResourcesPanel/MaterialsButton" index="0"]
margin_left = 8.0
margin_top = 8.0
margin_right = 104.0
margin_bottom = 104.0

[node name="TextureRect" parent="MarginContainer/HBoxContainer/GridManager/ResourcesPanel/MaterialsButton/Button/VBoxContainer" index="0"]
texture = ExtResource( 1 )

[node name="CategoryTabs" type="HBoxContainer" parent="MarginContainer/HBoxContainer/GridManager"]
margin_top = 314.0
margin_right = 500.0
margin_bottom = 332.0

[node name="ResourcesTab" type="Button" parent="MarginContainer/HBoxContainer/GridManager/CategoryTabs"]
margin_right = 109.0
margin_bottom = 18.0
text = "Resources"

[node name="FoodTab" type="Button" parent="MarginContainer/HBoxContainer/GridManager/CategoryTabs"]
margin_left = 113.0
margin_right = 169.0
margin_bottom = 18.0
text = "Food"

[node name="LuxuryTab" type="Button" parent="MarginContainer/HBoxContainer/GridManager/CategoryTabs"]
margin_left = 173.0
margin_right = 245.0
margin_bottom = 18.0
text = "Luxury"

[node name="QuestTab" type="Button" parent="MarginContainer/HBoxContainer/GridManager/CategoryTabs"]
margin_left = 249.0
margin_right = 314.0
margin_bottom = 18.0
text = "Quest"

[node name="ItemGrid" type="GridContainer" parent="MarginContainer/HBoxContainer/GridManager"]
margin_top = 336.0
margin_right = 500.0
margin_bottom = 584.0
columns = 6

[node name="GridSlot0" parent="MarginContainer/HBoxContainer/GridManager/ItemGrid" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 80.0
margin_bottom = 80.0

[node name="GridSlot1" parent="MarginContainer/HBoxContainer/GridManager/ItemGrid" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 84.0
margin_right = 164.0
margin_bottom = 80.0

[node name="GridSlot2" parent="MarginContainer/HBoxContainer/GridManager/ItemGrid" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 168.0
margin_right = 248.0
margin_bottom = 80.0

[node name="GridSlot3" parent="MarginContainer/HBoxContainer/GridManager/ItemGrid" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 252.0
margin_right = 332.0
margin_bottom = 80.0

[node name="GridSlot4" parent="MarginContainer/HBoxContainer/GridManager/ItemGrid" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 336.0
margin_right = 416.0
margin_bottom = 80.0

[node name="GridSlot5" parent="MarginContainer/HBoxContainer/GridManager/ItemGrid" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 420.0
margin_right = 500.0
margin_bottom = 80.0

[node name="GridSlot6" parent="MarginContainer/HBoxContainer/GridManager/ItemGrid" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 84.0
margin_right = 80.0
margin_bottom = 164.0

[node name="GridSlot7" parent="MarginContainer/HBoxContainer/GridManager/ItemGrid" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 84.0
margin_top = 84.0
margin_right = 164.0
margin_bottom = 164.0

[node name="GridSlot8" parent="MarginContainer/HBoxContainer/GridManager/ItemGrid" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 168.0
margin_top = 84.0
margin_right = 248.0
margin_bottom = 164.0

[node name="GridSlot9" parent="MarginContainer/HBoxContainer/GridManager/ItemGrid" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 252.0
margin_top = 84.0
margin_right = 332.0
margin_bottom = 164.0

[node name="GridSlot10" parent="MarginContainer/HBoxContainer/GridManager/ItemGrid" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 336.0
margin_top = 84.0
margin_right = 416.0
margin_bottom = 164.0

[node name="GridSlot11" parent="MarginContainer/HBoxContainer/GridManager/ItemGrid" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 420.0
margin_top = 84.0
margin_right = 500.0
margin_bottom = 164.0

[node name="GridSlot12" parent="MarginContainer/HBoxContainer/GridManager/ItemGrid" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 168.0
margin_right = 80.0
margin_bottom = 248.0

[node name="GridSlot13" parent="MarginContainer/HBoxContainer/GridManager/ItemGrid" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 84.0
margin_top = 168.0
margin_right = 164.0
margin_bottom = 248.0

[node name="GridSlot14" parent="MarginContainer/HBoxContainer/GridManager/ItemGrid" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 168.0
margin_top = 168.0
margin_right = 248.0
margin_bottom = 248.0

[node name="GridSlot15" parent="MarginContainer/HBoxContainer/GridManager/ItemGrid" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 252.0
margin_top = 168.0
margin_right = 332.0
margin_bottom = 248.0

[node name="GridSlot16" parent="MarginContainer/HBoxContainer/GridManager/ItemGrid" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 336.0
margin_top = 168.0
margin_right = 416.0
margin_bottom = 248.0

[node name="GridSlot17" parent="MarginContainer/HBoxContainer/GridManager/ItemGrid" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 420.0
margin_top = 168.0
margin_right = 500.0
margin_bottom = 248.0

[node name="ItemDetails" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 504.0
margin_right = 1008.0
margin_bottom = 584.0
size_flags_horizontal = 3

[node name="PanelContainer3" type="PanelContainer" parent="MarginContainer/HBoxContainer/ItemDetails"]
margin_right = 504.0
margin_bottom = 28.0

[node name="Name" type="Label" parent="MarginContainer/HBoxContainer/ItemDetails/PanelContainer3"]
margin_left = 8.0
margin_top = 8.0
margin_right = 496.0
margin_bottom = 20.0
align = 1

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/HBoxContainer/ItemDetails"]
margin_left = 164.0
margin_top = 32.0
margin_right = 340.0
margin_bottom = 208.0
size_flags_horizontal = 4

[node name="ItemDisplay" type="TextureRect" parent="MarginContainer/HBoxContainer/ItemDetails/PanelContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 168.0
margin_bottom = 168.0
rect_min_size = Vector2( 160, 160 )
expand = true
stretch_mode = 6

[node name="PanelContainer2" type="PanelContainer" parent="MarginContainer/HBoxContainer/ItemDetails"]
margin_top = 212.0
margin_right = 504.0
margin_bottom = 530.0
size_flags_vertical = 3

[node name="ItemDescription" type="Label" parent="MarginContainer/HBoxContainer/ItemDetails/PanelContainer2"]
margin_left = 8.0
margin_top = 8.0
margin_right = 496.0
margin_bottom = 310.0
size_flags_vertical = 1
autowrap = true
clip_text = true

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/ItemDetails/PanelContainer2"]
margin_left = 234.0
margin_top = 278.0
margin_right = 270.0
margin_bottom = 310.0
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/ItemDetails/PanelContainer2/MarginContainer"]
margin_right = 36.0
margin_bottom = 32.0
alignment = 1

[node name="Value" type="Label" parent="MarginContainer/HBoxContainer/ItemDetails/PanelContainer2/MarginContainer/HBoxContainer"]
margin_top = 10.0
margin_bottom = 22.0
valign = 1

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/ItemDetails/PanelContainer2/MarginContainer/HBoxContainer"]
margin_left = 4.0
margin_right = 36.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
texture = ExtResource( 7 )
expand = true
stretch_mode = 6

[node name="MenuTooltipProxy" type="Control" parent="MarginContainer/HBoxContainer/ItemDetails/PanelContainer2/MarginContainer"]
margin_right = 36.0
margin_bottom = 32.0
hint_tooltip = "Item Trade Value"
script = ExtResource( 8 )

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/ItemDetails"]
margin_top = 534.0
margin_right = 504.0
margin_bottom = 584.0
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16

[node name="UseButton" type="Button" parent="MarginContainer/HBoxContainer/ItemDetails/MarginContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 488.0
margin_bottom = 34.0
text = "Use"

[node name="CompactSubmenu" parent="." instance=ExtResource( 3 )]
visible = false

[connection signal="pressed" from="MarginContainer/HBoxContainer/ItemDetails/MarginContainer/UseButton" to="." method="_on_UseButton_pressed"]
[connection signal="update_items" from="CompactSubmenu" to="." method="_on_CompactSubmenu_update_items"]

[editable path="MarginContainer/HBoxContainer/GridManager/ResourcesPanel/WaterButton"]
[editable path="MarginContainer/HBoxContainer/GridManager/ResourcesPanel/MaterialsButton"]
